# rustynotes

./: Cargo.toml  README.md
src/: main.rs  note.rs
templates/: base.html  index.html
