[package]
name = "rustynotes"
version = "0.1.0"
authors = ["Luke Frisken <l.frisken@gmail.com>"]

[dependencies]
rocket = "0.3.15"
rocket_codegen = "0.3.15"
serde = "*"
serde_derive = "*"
rust-embed = "3.0.0"

[dependencies.askama]
version = "0.7"
features = ["with-rocket"]

[build-dependencies]
askama = "0.7"